# mas-doc-orchestrator

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile  QWEN.md  README.md  pyproject.toml  run_local.py  run_pdf_test.py  run_pipeline.py
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
config/: .env.example
data/docs/: ЦОД+ПАК.md  ЦОД+ПАК.meta.json  карта.md  карта.meta.json
data/glossary/: psb_org_structure.json
docs/: CONSTITUTION.md  PIPELINE.md  SEMANTIC_FLOW.md  architecture.md
docs/adr/: 001-orchestrator-reflection.md  002-smg.md  003-constitution-roles.md  004-vector-graph-store.md  smd-map.yaml
docs/verdicts/: 001-deepseek-ocr2.md
output/: orchestrator_ЦОД+ПАК_result.json  orchestrator_карта_result.json
prompts/: AUDIT.md  CHANGELOG.md  README.md  dream_agent.md
prompts/engine/: agent.md  (+3 more)
scripts/: ask_orchestrator.py  audit_prompts.py  batch_ontology_local.py  batch_ontology_reflector.py  benchmark_vision.py  extract_prompts.py  generate_dashboard.py  generate_ontology_reflection.py  generate_recommendations.py  reflection_smd.py  resume_cloud_ontology.py  resume_ontology_reflector.py  resume_ontology_reflector_local.py  run_cloud_pipeline.py  run_normalize.py  run_ocr2_full_pipeline.py  run_ocr2_pipeline.py  run_orchestrator.py  test_dynamic_threshold.py  test_fsm.py  test_fsm_integration.py  update_prompts_in_code.py  validate_production.py
src/: __init__.py  compute_resource.py  confidence_guard.py  dream_agent.py  page_batch.py  store.py
tests/: test_config.py  test_production.py  test_visual_extractor.py
(+100 files in other folders)
